--- a/Projects/GameEngine/GameEngine.vcxproj.filters
+++ b/Projects/GameEngine/GameEngine.vcxproj.filters
@@ -13,13 +13,19 @@
     <Filter Include="Header Files\System">
       <UniqueIdentifier>{05cd3624-59c4-44ad-9559-98a1f880dd1d}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\Player">
-      <UniqueIdentifier>{53fe99af-ccbc-4461-b8df-470c6b5323ac}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source Files\System">
       <UniqueIdentifier>{96dba168-1fe9-49e9-a415-0f55fce78102}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\Player">
+    <Filter Include="Source Files\Scene">
+      <UniqueIdentifier>{f031343c-010b-41b1-8997-a35d26732575}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Scene">
+      <UniqueIdentifier>{53750c76-ea29-4b49-9978-119622618ea1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Scene\Player">
+      <UniqueIdentifier>{53fe99af-ccbc-4461-b8df-470c6b5323ac}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Scene\Player">
       <UniqueIdentifier>{27f0d472-6309-49a0-88a8-aed603c84253}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
@@ -27,31 +33,31 @@
     <ClCompile Include="src\main.cpp">
       <Filter>Source Files\System</Filter>
     </ClCompile>
+    <ClCompile Include="src\player.cpp">
+      <Filter>Source Files\Scene\Player</Filter>
+    </ClCompile>
+    <ClCompile Include="src\robot.cpp">
+      <Filter>Source Files\Scene\Player</Filter>
+    </ClCompile>
     <ClCompile Include="src\scene.cpp">
       <Filter>Source Files\Scene</Filter>
     </ClCompile>
     <ClCompile Include="src\model.cpp">
       <Filter>Source Files\Scene</Filter>
     </ClCompile>
-    <ClCompile Include="src\player.cpp">
-      <Filter>Source Files\Player</Filter>
-    </ClCompile>
-    <ClCompile Include="src\robot.cpp">
-      <Filter>Source Files\Player</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\scene.h">
-      <Filter>Header Files\Scene</Filter>
+    <ClInclude Include="include\robot.h">
+      <Filter>Header Files\Scene\Player</Filter>
+    </ClInclude>
+    <ClInclude Include="include\player.h">
+      <Filter>Header Files\Scene\Player</Filter>
     </ClInclude>
     <ClInclude Include="include\model.h">
       <Filter>Header Files\Scene</Filter>
     </ClInclude>
-    <ClInclude Include="include\robot.h">
-      <Filter>Header Files\Player</Filter>
-    </ClInclude>
-    <ClInclude Include="include\player.h">
-      <Filter>Header Files\Player</Filter>
+    <ClInclude Include="include\scene.h">
+      <Filter>Header Files\Scene</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
