Fixed filename name error (Camera.cpp to camera.cpp)

--- a/Projects/GameEngine/GameEngine.vcxproj
+++ b/Projects/GameEngine/GameEngine.vcxproj
@@ -99,7 +99,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\Camera.cpp" />
+    <ClCompile Include="src\camera.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\model.cpp" />
     <ClCompile Include="src\scene.cpp" />
