Added Texture and Bitmap along with editing Model to initialise model handles and a texture

--- a/Projects/GameEngine/GameEngine.vcxproj
+++ b/Projects/GameEngine/GameEngine.vcxproj
@@ -104,6 +104,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\include\GLLoadGen\source\gl_core_4_3.cpp" />
+    <ClCompile Include="src\Bitmap.cpp" />
     <ClCompile Include="src\camera.cpp" />
     <ClCompile Include="src\glslprogram.cpp" />
     <ClCompile Include="src\main.cpp" />
@@ -111,15 +112,18 @@
     <ClCompile Include="src\scene.cpp" />
     <ClCompile Include="src\player.cpp" />
     <ClCompile Include="src\robot.cpp" />
+    <ClCompile Include="src\Texture.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\GLLoadGen\include\gl_core_4_3.hpp" />
+    <ClInclude Include="include\Bitmap.h" />
     <ClInclude Include="include\camera.h" />
     <ClInclude Include="include\glslprogram.h" />
     <ClInclude Include="include\model.h" />
     <ClInclude Include="include\scene.h" />
     <ClInclude Include="include\player.h" />
     <ClInclude Include="include\robot.h" />
+    <ClInclude Include="include\Texture.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="res\Shaders\basic.frag" />
