Updated ModelLoader and TextureLoader to get data from .obj and bitmap files into the Model class

--- a/Projects/GameEngine/GameEngine.vcxproj.filters
+++ b/Projects/GameEngine/GameEngine.vcxproj.filters
@@ -78,19 +78,13 @@
     <ClCompile Include="src\light.cpp">
       <Filter>Source Files\Scene\Model</Filter>
     </ClCompile>
-    <ClCompile Include="src\texture.cpp">
-      <Filter>Source Files\Scene\Model</Filter>
-    </ClCompile>
-    <ClCompile Include="src\loader.cpp">
-      <Filter>Source Files\FileLoading</Filter>
-    </ClCompile>
-    <ClCompile Include="src\imageloader.cpp">
-      <Filter>Source Files\FileLoading</Filter>
-    </ClCompile>
-    <ClCompile Include="src\objectloader.cpp">
-      <Filter>Source Files\FileLoading</Filter>
-    </ClCompile>
     <ClCompile Include="src\xmlloader.cpp">
+      <Filter>Source Files\FileLoading</Filter>
+    </ClCompile>
+    <ClCompile Include="src\textureloader.cpp">
+      <Filter>Source Files\FileLoading</Filter>
+    </ClCompile>
+    <ClCompile Include="src\modelloader.cpp">
       <Filter>Source Files\FileLoading</Filter>
     </ClCompile>
   </ItemGroup>
@@ -113,12 +107,6 @@
     <ClInclude Include="include\light.h">
       <Filter>Header Files\Scene\Model</Filter>
     </ClInclude>
-    <ClInclude Include="include\loader.h">
-      <Filter>Header Files\FileLoading</Filter>
-    </ClInclude>
-    <ClInclude Include="include\texture.h">
-      <Filter>Header Files\Scene\Model</Filter>
-    </ClInclude>
     <ClInclude Include="include\gameobject.h">
       <Filter>Header Files\Scene\Object</Filter>
     </ClInclude>
@@ -128,13 +116,13 @@
     <ClInclude Include="include\staticobject.h">
       <Filter>Header Files\Scene\Object</Filter>
     </ClInclude>
-    <ClInclude Include="include\imageloader.h">
-      <Filter>Header Files\FileLoading</Filter>
-    </ClInclude>
-    <ClInclude Include="include\objectloader.h">
-      <Filter>Header Files\FileLoading</Filter>
-    </ClInclude>
     <ClInclude Include="include\xmlloader.h">
+      <Filter>Header Files\FileLoading</Filter>
+    </ClInclude>
+    <ClInclude Include="include\textureloader.h">
+      <Filter>Header Files\FileLoading</Filter>
+    </ClInclude>
+    <ClInclude Include="include\modelloader.h">
       <Filter>Header Files\FileLoading</Filter>
     </ClInclude>
   </ItemGroup>
